fix: improve authentication flow and error handling

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Recipe Finder",
-  "name": "Recipe Finder - Find and Share Recipes",
+  "name": "Recipe Finder App",
   "icons": [
     {
       "src": "favicon.ico",
