--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Recipe Finder",
-  "name": "Recipe Finder App",
+  "name": "Recipe Finder Application",
   "icons": [
     {
       "src": "favicon.ico",
